tests/sema/fail/v6_fail_str_map.ep
# COMPILE_FAIL: str does not support map repr
fun main(): void {
    let m = new map[str]i64
    println(str(m))
}
